# python-packaging

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build-package.sh  check-code-quality.sh  my_file.py  my_other_file.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
.github/workflows/: publish.yaml
my_folder/: README.md  my_nested_file.py
packaging/: my_file.py
packaging.egg-info/: PKG-INFO  SOURCES.txt
packaging/my_folder/: my_nested_file.py
packaging_demo/: my_file.py
packaging_demo/my_folder/: README.md  my_nested_file.py
tests/: README.md  test_states_info.py
tests/my_folder/: test_my_nested_file.py
